# Nexus

./: .gitignore  pyproject.toml  requirements-dev.txt  start_nexus.bat
app/: main.py
core/: runtime_paths.py
db/: base.py  init_db.py  session.py
docs/: 00_north_star.md  01_estado_actual.md  02_roadmap.md  03_backlog_ideas.md  04_glosario.md  05_decisiones.md  06_sistema_de_trabajo_tdah.md  07_contexto_territorial_externo.md
tests/: test_address_normalization.py  test_ai_explanations_service.py  test_casafari_debug_service.py  test_casafari_history_connector.py  test_casafari_session_service.py  test_casafari_sync_service.py  test_copilot_llm_service.py  test_copilot_service.py  test_csv_loader.py  test_dashboard_stats.py  test_external_context_catalog.py  test_external_zone_context_service.py  test_import_inbox_service.py  test_leaflet_map_widget.py  test_listing_matching.py  test_main_window_bootstrap.py  test_match_reviews.py  test_microzones.py  test_opportunity_queue.py  test_portal_normalization.py  test_predictive_signal_service.py  test_radar_service.py  test_runtime_database_bootstrap.py  test_search_service.py  test_search_view.py  test_spatial_map_service.py  test_system_reset_service.py  test_zone_labels.py  test_zone_scoring_v2.py
tools/: add_match_review_example.py  audit_integrity.py  audit_overlap.py  audit_resolution.py  audit_telegram.py  backfill_geography.py  build_external_context_catalog.py  build_external_zone_context.py  build_madrid_street_catalog.py  create_match_review_table.py  debug_geography_matches.py  debug_geography_points.py  (+5 more)
(+94 files in other folders)
